# python-for-scicomp

./: .buildinfo  .gitignore  binder.rst  conf.py  data-visualization.rst  dependencies.rst  index.html  index.rst  installation.rst  jupyter.ipynb  jupyter.rst  libraries.rst  matplotlib.rst  numpy.rst  numpy_old.rst  objects.inv  packaging.rst  pandas.ipynb  pandas.rst  parallel-pi-multiprocessing.ipynb  parallel.rst  python.rst  requirements.txt  scipy.rst  scripts.rst  searchindex.js
_sources/: index.rst.txt  jupyter.ipynb.txt  libraries.rst.txt  numpy.rst.txt  packaging.rst.txt  pandas.rst.txt  parallel.rst.txt  scripts.rst.txt  xarray.rst.txt
binder/: index.html
content/: binder.rst  catfacts.jsonl  conf.py  cython.rst  data-formats.rst  data-visualization.md  data-visualization.rst  dependencies.rst  format_comparison_array.csv  format_comparison_tidy.csv  guide.rst  index.rst  installation.rst  jupyter.ipynb  libraries.rst  numpy-advanced.rst  numpy.rst  packaging.rst  pandas.rst  parallel-pi-multiprocessing.ipynb  parallel.rst  plotting-matplotlib.md  plotting-vega-altair.md  productivity.md  productivity.rst  profiling.md  python.rst  quick-reference.rst  scipy.rst  scripts.rst  web-apis.ipynb  work-with-data.rst  xarray.rst
content/packaging-example-project/: pyproject.toml  pyproject.toml-partial  test.py  test_editable.py
content/packaging-example-project/calculator/: integrating.py
cython/: index.html
data-formats/: index.html
data-visualization/: index.html
dependencies/: index.html
exercises/: index.html
genindex/: index.html
(+373 files in other folders)
